depends_compile_tests/tests/fail/derive/graph/cycle.stderr
error: Cycle detected in graph definition.
 --> tests/fail/derive/graph/cycle.rs:6:10
  |
6 | #[derive(Graph)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Graph` (in Nightly builds, run with -Z macro-backtrace for more info)
